# jupyter-power-usage

./: .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml  lint.yml  prep-release.yml  publish-release.yml  tests.yml
binder/: environment.yml
jupyter_power_usage/: __init__.py  api.py  config.py  metrics.py  utils.py
jupyter_power_usage/etc/jupyter_server_config.d/: jupyter-power-usage.json
jupyter_power_usage/tests/: test_basic.py
schema/: plugin.json
src/: cpuPowerView.tsx  emissionsHandler.ts  emissionsView.tsx  format.ts  gpuPowerView.tsx  index.ts  indicator.tsx  model.ts
style/: base.css
